fix: recipes listing service
